--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
-# you should list here the libraries you will use in the project
-streamlit==0.85.0
-altair<5
+altair
+numpy
+pandas
+matplotlib
+seaborn
+ydata-profiling
+plotly
+ppscore
+streamlit
+feature-engine
+imbalanced-learn
+scikit-learn
+xgboost
+yellowbrick
+Pillow
